@@ -31,7 +31,7 @@ typedef enum {
 typedef enum {
 	STDF_REC_SUB_FAR          = 10,
 	STDF_REC_SUB_ATR          = 20,
-        STDF_REC_SUB_VUR          = 30,
+	STDF_REC_SUB_VUR          = 30,
 	STDF_REC_SUB_MIR          = 10,
 	STDF_REC_SUB_MRR          = 20,
 	STDF_REC_SUB_PCR          = 30,
@@ -42,11 +42,11 @@ typedef enum {
 	STDF_REC_SUB_PLR          = 63,
 	STDF_REC_SUB_RDR          = 70,
 	STDF_REC_SUB_SDR          = 80,
-        STDF_REC_SUB_PSR          = 90,
-        STDF_REC_SUB_NMR          = 91,
-        STDF_REC_SUB_CNR          = 92,
-        STDF_REC_SUB_SSR          = 93,
-        STDF_REC_SUB_CDR          = 94,
+	STDF_REC_SUB_PSR          = 90,
+	STDF_REC_SUB_NMR          = 91,
+	STDF_REC_SUB_CNR          = 92,
+	STDF_REC_SUB_SSR          = 93,
+	STDF_REC_SUB_CDR          = 94,
 	STDF_REC_SUB_WIR          = 10,
 	STDF_REC_SUB_WRR          = 20,
 	STDF_REC_SUB_WCR          = 30,
